# vllm-ascend

./: .gitignore  .gitmodules  .markdownlint.yaml  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.zh.md  Dockerfile  Dockerfile.310p  Dockerfile.310p.openEuler  Dockerfile.a3  Dockerfile.a3.openEuler  Dockerfile.a5  Dockerfile.a5.openEuler  Dockerfile.openEuler  README.md  README.zh.md  codecov.yml  collect_env.py  format.sh  mypy.ini  packages.txt  pta_install.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-lint.txt  requirements.txt  setup.py  test.py  typos.toml
csrc/: CMakeLists.txt  build.sh  build_aclnn.sh  build_batch_invariant_ops.sh  camem_allocator.cpp  ops.h  torch_binding.cpp  torch_binding_meta.cpp  utils.h
csrc/aclnn_torch_adapter/: NPUBridge.cpp  NPUBridge.h  NPUStorageImpl.cpp  NPUStorageImpl.h  op_api_common.h
csrc/add_rms_norm_bias/op_host/: CMakeLists.txt  add_rms_norm_bias_def.cpp  add_rms_norm_bias_infershape.cpp  add_rms_norm_bias_tiling.cpp  add_rms_norm_bias_tiling.h  error_log.h
csrc/add_rms_norm_bias/op_kernel/: add_rms_norm_bias.cpp  add_rms_norm_bias.h  add_rms_norm_bias_merge_n.h  add_rms_norm_bias_multi_n.h  add_rms_norm_bias_single_n.h  add_rms_norm_bias_split_d.h  reduce_common.h  rms_norm_base.h
csrc/apply_top_k_top_p_custom/op_host/: CMakeLists.txt  aclnn_apply_top_k_top_p_custom.cpp  aclnn_apply_top_k_top_p_custom.h  apply_top_k_top_p_custom.cpp  apply_top_k_top_p_custom.h  apply_top_k_top_p_custom_def.cpp  apply_top_k_top_p_custom_tiling.cpp  apply_top_k_top_p_custom_tiling.h  error_log.h  sort.h
csrc/apply_top_k_top_p_custom/op_kernel/: apply_top_k_top_p_custom.cpp  apply_top_k_top_p_custom.h  apply_top_p_custom.h
csrc/attention/compressor/: README.md
csrc/attention/fused_gdn_gating/: fused_gdn_gating_torch_adpt.h
csrc/attention/indexer_compress_epilog_v2/: CMakeLists.txt
csrc/attention/kv_compress_epilog/: CMakeLists.txt
csrc/attention/kv_quant_sparse_attn_sharedkv/: README.md
csrc/attention/kv_quant_sparse_attn_sharedkv_metadata/: CMakeLists.txt  README.md
csrc/attention/lightning_indexer/: README.md  lightning_indexer_torch_adpt.h
csrc/attention/quant_lightning_indexer/: README.md
csrc/attention/quant_lightning_indexer_metadata/: CMakeLists.txt  README.md
csrc/attention/recurrent_gated_delta_rule/: recurrent_gated_delta_rule_torch_adpt.h
csrc/attention/rms_norm_dynamic_quant/: CMakeLists.txt
csrc/attention/sparse_attn_sharedkv/: README.md
csrc/attention/sparse_attn_sharedkv_metadata/: CMakeLists.txt  README.md
csrc/attention/sparse_flash_attention/: README.md  sparse_flash_attention_torch_adpt.h
csrc/attention/store_kv_block/: store_kv_block_torch_adpt.h
csrc/batch_matmul_transpose/op_host/: batch_matmul_transpose.h  common.h  common_tiling.h
csrc/batch_matmul_transpose/op_kernel/: batch_matmul_transpose_kernel.cpp
csrc/causal_conv1d/op_host/: CMakeLists.txt  causal_conv1d_def.cpp  causal_conv1d_infershape.cpp  causal_conv1d_tiling.cpp  causal_conv1d_tiling.h  causal_conv1d_tiling_planner.h  causal_conv1d_tiling_utils.h  causal_conv1d_tiling_validation.h  math_util.h  tiling_util.cpp
csrc/causal_conv1d/op_kernel/: causal_conv1d.cpp  causal_conv1d.h  causal_conv1d_common.h  causal_conv1d_fn.h  causal_conv1d_fn_tasks.h  causal_conv1d_tiling_data.h  causal_conv1d_tiling_key.h  causal_conv1d_update.h
csrc/causal_conv1d/tiling_base/: data_copy_transpose_tiling.h  tiling_templates_registry.h  tiling_util.h
csrc/causal_conv1d_v310/: causal_conv1d_310_torch_adpt.h
csrc/causal_conv1d_v310/op_host/: CMakeLists.txt  causal_conv1d_v310_def.cpp  causal_conv1d_v310_infershape.cpp  causal_conv1d_v310_tiling.cpp  causal_conv1d_v310_tiling.h
csrc/causal_conv1d_v310/op_kernel/: causal_conv1d_v310.cpp  causal_conv1d_v310.h  causal_conv1d_v310_common.h  causal_conv1d_v310_tiling_data.h  causal_conv1d_v310_tiling_key.h
csrc/causal_conv1d_v310/tiling_base/: tiling_base.h
csrc/cmake/: config.cmake  custom_build.cmake  func.cmake  intf.cmake  intf_pub.cmake  opbuild.cmake
csrc/cmake/modules/: Findaicpu.cmake  Findalog.cmake
csrc/cmake/scripts/: prepare.sh
csrc/copy_and_expand_eagle_inputs/op_host/: CMakeLists.txt  copy_and_expand_eagle_inputs_def.cpp  copy_and_expand_eagle_inputs_infershape.cpp  copy_and_expand_eagle_inputs_tiling.cpp  copy_and_expand_eagle_inputs_tiling.h
csrc/copy_and_expand_eagle_inputs/op_kernel/: copy_and_expand_eagle_inputs.cpp
csrc/dispatch_ffn_combine/: dispatch_ffn_combine_torch_adpt.h
csrc/dispatch_ffn_combine/op_host/: CMakeLists.txt  aclnn_dispatch_ffn_combine.cpp  aclnn_dispatch_ffn_combine.h  dispatch_ffn_combine_def.cpp  dispatch_ffn_combine_proto.cpp  dispatch_ffn_combine_tiling.cpp  hcom_topo_info.h
csrc/dispatch_ffn_combine/op_kernel/: dispatch_ffn_combine.cpp  dispatch_ffn_combine.h  dispatch_ffn_combine_kernel.hpp  dispatch_ffn_combine_tiling.h
csrc/dispatch_ffn_combine_bf16/op_host/: CMakeLists.txt  aclnn_dispatch_ffn_combine_bf16.cpp  aclnn_dispatch_ffn_combine_bf16.h  dispatch_ffn_combine_bf16_def.cpp  dispatch_ffn_combine_bf16_proto.cpp  dispatch_ffn_combine_bf16_tiling.cpp
csrc/dispatch_ffn_combine_bf16/op_kernel/: dispatch_ffn_combine_bf16.cpp  dispatch_ffn_combine_bf16.h  dispatch_ffn_combine_bf16_kernel.hpp  dispatch_ffn_combine_bf16_tiling.h
csrc/dispatch_ffn_combine_w4_a8/op_host/: CMakeLists.txt  aclnn_dispatch_ffn_combine_w4_a8.cpp  aclnn_dispatch_ffn_combine_w4_a8.h  dispatch_ffn_combine_w4_a8_def.cpp  dispatch_ffn_combine_w4_a8_proto.cpp  dispatch_ffn_combine_w4_a8_tiling.cpp  error_log.h  tiling_args.h
csrc/kernels/: advance_step.cpp  bgmv_expand.cpp  bgmv_shrink.cpp  get_masked_input_and_mask_kernel.cpp  math_utils.h  pos_encoding_kernels.cpp  sgmv_expand.cpp  sgmv_shrink.cpp  types.h  utils.h
csrc/lightning_indexer_quant/: lightning_indexer_quant_torch_adpt.h
csrc/mla_preprocess/: mla_preprocess_torch_adpt.h
csrc/recurrent_gated_delta_rule_v310/: recurrent_gated_delta_rule_310_torch_adpt.h
csrc/utils/: CMakeLists.txt
(+3205 files in other folders)
